--- a/public/youtuber.html
+++ b/public/youtuber.html
@@ -22,7 +22,7 @@
             
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="customers.html">Customers</a></li>
+                <li><a href="customer.html">Customers</a></li>
                 <li><a href="shirts.html">Shirts</a></li>
                 <li><a href="wishlist.html">Wishlist</a></li>
                 <li><a href="youtuber.html">Youtuber</a></li>
