--- a/public/customer.html
+++ b/public/customer.html
@@ -65,6 +65,15 @@
             <button id="edit-customer-button">Edit Customer</button>
             <div id="edit-customer-tab" style="display: none;">
                 <form id="edit-customer-form">
+                    <label for="edit-id">ID:</label><br>
+                    <input type="text" id="edit-id" name="edit-id"><br>
+                    <label for="edit-name">Name:</label><br>
+                    <input type="text" id="edit-name" name="edit-name"><br>
+                    <label for="edit-email">Email:</label><br>
+                    <input type="text" id="edit-email" name="edit-email"><br>
+                    <label for="edit-address">Address:</label><br>
+                    <input type="text" id="edit-address" name="edit-address"><br>
+                    <button id="submitButton" type="submit">Edit Customer</button>
               
 
 
