--- a/public/youtuber.html
+++ b/public/youtuber.html
@@ -59,8 +59,18 @@
             </div>
 
             <!-- Edit button   -->
-            <button id="edit-youtuber-Button">Edit YouTuber</button>
+            <button id="edit-youtuber-button">Edit YouTuber</button>
             <div id="edit-youtuber-tab" style="display: none;">
+                <form id="edit-youtuber-form">
+                    <label for="edit-youtuberid">YouTuberID:</label><br>
+                    <input type="text" id="edit-youtuberid" name="edit-youtuberid"><br>
+                    <label for="edit-youtubername">Name:</label><br>
+                    <input type="text" id="edit-youtubername" name="edit-youtubername"><br>
+                    <label for="edit-channel">Channel:</label><br>
+                    <input type="text" id="edit-channel" name="edit-channel"><br>
+                    
+                    <button id="submitButton" type="submit">Edit Shirt</button>
+                </form>
 
             </div>
 
