Added some stuff for index

--- a/public/customer.html
+++ b/public/customer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>   
     <head>
-        <title>Customers</title>
+        <title>CUSTOMERS</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
@@ -9,7 +9,7 @@
         <nav>
             <div class="nav-container">
                 <a href="#home" class="nav-logo">
-                    <img src="YoutubeShirts-logo.png" alt="Your Logo">
+                    <img src="img/YoutubeShirts-logo.png" alt="Your Logo">
                     <a href="#home" class="nav-logo">YouTube Shirts</a>
                 </a>
                 
@@ -44,7 +44,7 @@
                         </form>
 
                         <!-- FOR EXISTING CUSTOMER -->
-                        <h1>EXISTING CUSTOMERS</h1>
+                        <h1>Existing Customers</h1>
                         <table id="listCustomers">
                             <thead>
                                 <th>ID</th>
