--- a/public/wishlist.html
+++ b/public/wishlist.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="nav-container">
             <a href="#home" class="nav-logo">
-                <img src="YoutubeShirts-logo.png" alt="Your Logo">
+                <img src="img/YoutubeShirts-logo.png" alt="Your Logo">
                 <a href="#home" class="nav-logo">YouTube Shirts</a>
             </a>
             
@@ -34,7 +34,7 @@
     <div id="page-container">
         <div id="content-wrap">
             <div class="centered-container">
-                <h1>Wish-list </h1>
+                <header><h1>WISHLIST</h1></header>
             
                 <button id="add-wishlist-button">Add to Wishlist</button>
                 <div id="add-wishlist-tab" style="display: none;">
