add and edit functions done

--- a/public/youtuber.html
+++ b/public/youtuber.html
@@ -83,8 +83,17 @@
             </div>
 
             <h1>Endorsement </h1>
-            <button id="check-endorsementButton">Check</button>
-                <div id="check-endorsement-tab" style="display: none;">
+            <button id="add-endorsement-button">Add an endorsement</button>
+                <div id="add-endorsement-tab" style="display: none;">
+                    <form id="add-endorsement-form">
+                        <label for="add-youtuberID">YoutuberID:</label><br>
+                        <input type="text" id="add-youtuberID" name="add-youtuberID"><br>
+                        <label for="add-shirtid">ShirtID:</label><br>
+                        <input type="text" id="add-shirtid" name="add-shirtid"><br>
+
+                        <button id="submitButton" type="submit">Add endorsement</button>
+                    </form>
+                </div>   
         </div>
 
 
