added more tables

--- a/public/youtuber.html
+++ b/public/youtuber.html
@@ -75,12 +75,12 @@
             </div>
 
 
-            <!--Delete  button-->
+            <!--Delete  button
             <button id="addButton">Delete YouTuber</button>
             <div id="delete-youtuber-tab" style="display: none;">
 
 
-            </div>
+            </div>-->
 
             <h1>Endorsement </h1>
             <button id="add-endorsement-button">Add an endorsement</button>
