Some last minute fixes

--- a/public/shirts.html
+++ b/public/shirts.html
@@ -144,8 +144,8 @@
                             <form id="add-shirt_condition-form">
                                 <label for="qa-id">QualityControlID:</label><br>
                                     <input type="text" id="qa-id" name="qa-id"><br>  
-                                <label for="checkername">CheckerName:</label><br>
-                                    <input type="text" id="checkername" name="checkername"><br> 
+                                <label for="qacheckername">CheckerName:</label><br>
+                                    <input type="text" id="qacheckername" name="qacheckername"><br> 
                                 <label for="inspecdate">InspectionDate:</label><br>
                                     <input type="text" id="inspecdate" name="inspecdate" placeholder="YYYY-MM-DD"><br>
                                 <label for="qualityrating">QualityRating:</label><br>
