--- a/public/wishlist.html
+++ b/public/wishlist.html
@@ -39,8 +39,8 @@
                                     <input type="text" id="shirtid" name="shirtid"><br>  
                                 <label for="cartid">CartID:</label><br>
                                     <input type="text" id="cartid" name="cartid"><br>
-                                <label for="customerid">CustomerID:</label><br>
-                                    <input type="text" id="customerid" name="customerid"><br>
+                                <label for="wcustomerid">CustomerID:</label><br>
+                                    <input type="text" id="wcustomerid" name="wcustomerid"><br>
                                 <label for="dateadded">DateAdded:</label><br>
                                     <input type="text" id="dateadded" name="dateadded" placeholder="YYYY-MM-DD"><br>
                                 
